clang/test/BSC/Positive/Driver/rewrite-bsc/Generic/rewrite_bsc_generic_with_header/rewrite_bsc_generic_header.hbs
#ifndef REWRITE_H
#define REWRITE_H

int int::increase(int* this);

T1 max<T1, T2>(T1 a, T2 b) {
  int x = 1;
  int::increase(&x);
  int c = x.increase();
  return a > b ? a : b;
}

struct Foo<T> {
  T a;
};

#endif